Services/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  labels:
    app: plex
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
        app.kubernetes.io/name: plex
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - name: plex
          image: plexinc/pms-docker
          imagePullPolicy: Always
          resources:
            limits:
              gpu.intel.com/i915: "1"
            requests: 
              gpu.intel.com/i915: "1" 
          ports:
            - containerPort: 32400
              name: web
              protocol: TCP
            - containerPort: 32469
              name: dlna-ssl
              protocol: TCP
            - containerPort: 1900
              name: dlna-udp
              protocol: UDP
            - containerPort: 3005
              name: plex-companion
              protocol: TCP
            - containerPort: 5353
              name: discovery-udp
              protocol: UDP
            - containerPort: 8324
              name: plex-roku
              protocol: TCP
            - containerPort: 32410
              name: gmd-32410
              protocol: UDP
            - containerPort: 32412
              name: gmd-32412
              protocol: UDP
            - containerPort: 32413
              name: gmd-32413
              protocol: UDP
            - containerPort: 32414
              name: gmd-32414
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: plex
            - mountPath: "/movies"
              name: smb
              readOnly: false
              subPath: movies
            - mountPath: "/tvshows"
              name: smb
              readOnly: false
              subPath: tvshows
            - mountPath: "/cartons"
              name: smb
              readOnly: false
              subPath: cartons
            - mountPath: "/cartons-tvshows"
              name: smb
              readOnly: false
              subPath: cartons-tvshows
            - mountPath: "/anime"
              name: smb
              readOnly: false
              subPath: anime
            - mountPath: "/qbittorrent/downloads"
              name: smb
              readOnly: false
              subPath: qbittorrent/downloads
            - mountPath: "/marijana"
              name: smb
              readOnly: false
              subPath: marijana

      volumes:
        - name: plex
          persistentVolumeClaim:
            claimName: plex
        - name: smb
          persistentVolumeClaim:
            claimName: pvc-plex-smb
