Services/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  annotations:
    metallb.universe.tf/allow-shared-ip: plex
spec:
  selector:
    app: plex
  ports:
    - port: 32400
      targetPort: 32400
      name: web
      protocol: TCP
    - port: 3005
      targetPort: 3005
      name: pms-companion
      protocol: TCP
    - port: 8324
      targetPort: 8324
      name: pms-roku
      protocol: TCP
    - port: 32469
      targetPort: 32469
      name: dlna-ssl
      protocol: TCP
    - port: 1900
      targetPort: 1900
      name: dlna-udp
      protocol: UDP
    - port: 5353
      targetPort: 5353
      name: discovery-udp
      protocol: UDP
    - port: 32410
      targetPort: 32410
      name: gmd-32410
      protocol: UDP
    - port: 32412
      targetPort: 32412
      name: gmd-32412
      protocol: UDP
    - port: 32413
      targetPort: 32413
      name: gmd-32413
      protocol: UDP
    - port: 32414
      targetPort: 32414
      name: gmd-32414
      protocol: UDP
  type: LoadBalancer
  loadBalancerIP: 192.168.1.125
